--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 main {
-    background-color: aqua;
+    background-color: #48cae4;
     width: 100%;
 }
 
 body {
     width: 80%;
-    background-color: beige;
+    background-color: #00b4d8;
     margin: 0 auto;
 }
 
 html {
     width: 100%;
-    background-color: black;
+    background-color: #023e8a
 }
 
 aside {
     width: 15%;
-    background-color: blue;
+    background-color: #0077b6;
 
 }
 h2, p{
@@ -28,7 +28,7 @@ header{
 margin-top: 0px;
 }
 footer{
-    background-color: blueviolet;
+    background-color: #00b4d8;
     width: 100%;
 }
 picture{
