--- a/tabla1.css
+++ b/tabla1.css
@@ -11,30 +11,39 @@ body {
 
 html {
     width: 100%;
-    background-color: black;
+   background-image: url(fonddd.jpg);
 }
 
 header {
     text-align: center;
 }
 
-aside {
-    width: 15%;
-    background-color: blue;
-}
+
 
 footer {
-    background-color: aquamarine;
+    background-image: url(fondo.png);
+   background-repeat: no-repeat;
+   background-color: #ca261a;
+   background-position: right;
+
+
+
 }
+
 
 section {
     margin: 20px;
 }
 
 img {
+    width: 150px;
+}
+.imagen1{
     width: 200px;
 }
-
+.imagen2{
+    width: 100px;
+}
 
 table {
     border-collapse: collapse;
@@ -42,7 +51,7 @@ table {
     margin: auto;
     background-color: rgb(250, 250, 250);
     font-size: 1.4em;
-    width: 80%;
+    width: 100%;
 }
 
 td,
@@ -55,6 +64,16 @@ tr,
 td {
     text-align: center;
 }
+footer img{
+    width: 80px;
+    display: flex;
+justify-content: center;
 
+}
+footer picture{
+    display: flex;
+justify-content: center;
+
+}
 
 
