--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ aside {
     background-color: #0077b6;
 
 }
+aside ul{  list-style-type: none;
+    text-align: center;
+    padding: 0px;
+
+}
+
 h2, p{
     margin: 20px;
 }
